--- a/frontend/scss/components/organisms/news.scss
+++ b/frontend/scss/components/organisms/news.scss
@@ -51,6 +51,7 @@
     scroll-snap-type: x mandatory;
     overflow-y: hidden;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
     display: flex;
     flex-wrap: nowrap;
     width: auto;
